--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   box-sizing: border-box;
-  margin: 0 ;
+  margin: 0 30%;
   /* display: flex;
   flex-direction: column; */
 }
